First Last Prev Next    No search results available      Search page      Enter new bug
Bug#: 20239
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Not yet assigned to anyone <unassigned@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: lalle@sics.se
Add CC:
CC:
Remove selected CCs
Build:
Patch URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 20239 depends on: Show dependency tree
Show dependency graph
Bug 20239 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: 2005-02-27 22:29 Opened: 2005-02-27 22:24
When feeding a preprocessed input file consisting of only a newline to gcc, it
gets a segmentation fault:

snaga:tmp> rm -f test.i
snaga:tmp> echo > test.i
snaga:tmp> gcc test.i
test.i:1: internal compiler error: Segmentation fault
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.

------- Comment #1 From Andrew Pinski 2005-02-27 22:29 -------
Confirmed, only happens in 3.4.x.

------- Comment #2 From Richard Guenther 2005-09-09 11:57 -------
Obvious patch submitted.

------- Comment #3 From Richard Guenther 2005-09-09 13:37 -------
Fixed.

------- Comment #4 From CVS Commits 2005-09-09 13:37 -------
Subject: Bug 20239

CVSROOT:	/cvs/gcc
Module name:	gcc
Branch: 	gcc-3_4-branch
Changes by:	rguenth@gcc.gnu.org	2005-09-09 13:37:07

Modified files:
	gcc            : ChangeLog cppinit.c 

Log message:
	2005-09-09  Richard Guenther  <rguenther@suse.de>
	
	PR c/20239
	* cppinit.c (cpp_read_main_file): Avoid segfaulting on
	NULL pfile->map.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=2.2326.2.916&r2=2.2326.2.917
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cppinit.c.diff?cvsroot=gcc&only_with_tag=gcc-3_4-branch&r1=1.297.6.6&r2=1.297.6.7


------- Comment #5 From Richard Guenther 2006-01-09 16:34 -------
*** Bug 25726 has been marked as a duplicate of this bug. ***

First Last Prev Next    No search results available      Search page      Enter new bug