re PR c/20239 (ICE on empty preprocessed input)

2005-09-09  Richard Guenther  <rguenther@suse.de>

	PR c/20239
	* cppinit.c (cpp_read_main_file): Avoid segfaulting on
	NULL pfile->map.

From-SVN: r104096